# lbtl

./: make-shader.sh  meson.build  run.bat  run.sh  setup.bat  setup.sh
assets/glb/: ships.glb
src/: alloc.cpp  alloc.hpp  assets.cpp  assets.hpp  components.hpp  engine.hpp  impl.cpp  input.cpp  input.hpp  linalg.hpp  main.cpp  physics.cpp  physics.hpp  player.cpp  player.hpp  prefab.cpp  prefab.hpp  renderer.cpp  renderer.hpp  types.hpp  utils.hpp  world.cpp  world.hpp
src/HandmadeMath/: HandmadeMath64.h
src/shader/: unlit.glsl  unlit.glsl.h  unlit.h
